k8-manifests/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-app
  namespace: qa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodejs-app
  template:
    metadata:
      labels:
        app: nodejs-app
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: nodejs-app
        image: driveopssurya/nodejs-app:0c11cd908a6afadd9e7e2fe6c18b828b13194383
        ports:
        - containerPort: 5000
